@@ -1,3 +1,11 @@
+[0, 15, 90]: 2019-04-04
+  - fix issue with updating `CommentedMap` from list of tuples (reported by 
+    `Peter Henry <https://bitbucket.org/mosbasik/>`__)
+
+[0, 15, 90]: 2019-04-04
+  - fix issue with updating `CommentedMap` from list of tuples (reported by 
+    `Peter Henry <https://bitbucket.org/mosbasik/>`__)
+
 [0, 15, 89]: 2019-02-27
   - fix for items with flow-mapping in block sequence output on single line
     (reported by `Zahari Dim <https://bitbucket.org/zahari_dim/>`__)
